--- a/tema3/html/metadatos.html
+++ b/tema3/html/metadatos.html
@@ -159,7 +159,7 @@
 </tbody></table>
 </div>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>Los dos documentos HTML están escritos con la misma codificación ¿cuál es y cuál está usando el navegador al leer cada uno de ellos?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>Los ficheros anteriores están guardados con diferente codificación, que está convenientemente declarada como metainformación en el HTML ¿cuáles son sus codificaciones? ¿por qué solo uno de ellos se ve correctamente?</em></p>
 </blockquote>
 <blockquote>
 <p>🔍 <strong>Nota:</strong> <em>Intenta ver el código fuente de cada uno de los marcos haciendo click derecho sobre ellos.</em></p>
