--- a/tema3/html/semantica.html
+++ b/tema3/html/semantica.html
@@ -158,7 +158,7 @@
 <li>
 <p>A continuación se muestran diferentes elementos HTML usando etiquetas no semánticas:</p>
 <pre><code class="language-html">&lt;span&gt;Título principal&lt;/span&gt;
-&lt;div onclick=&quot;&quot;&gt;Enviar formulario&lt;/span&gt;
+&lt;div onclick=&quot;&quot;&gt;Enviar formulario&lt;/div&gt;
 &lt;b&gt;Este texto es importante resaltarlo&lt;/b&gt;
 Párrafo 1&lt;br&gt;&lt;br&gt;Párrafo 2
 Campo: &lt;input type=&quot;text&quot;&gt;
@@ -183,13 +183,13 @@ Más información sobre accesibilidad &lt;a href=&quot;&quot;&gt;aquí&lt;/a&gt;
   &lt;article&gt; &lt;!-- Algo autocontenido, distribuible, reusable de forma independiente --&gt;
     &lt;h2&gt;Título del artículo&lt;/h2&gt;
     &lt;section&gt;
-      &lt;h3&gt;Título de una sección dentro del artículo&lt;/h2&gt;
+      &lt;h3&gt;Título de una sección dentro del artículo&lt;/h3&gt;
       &lt;p&gt;Contenido de la sección&lt;/p&gt;
     &lt;/section&gt;
     &lt;aside&gt;
       &lt;h3&gt;Contenido relacionado indirectamente: citas, tabla de contenidos, etc.&lt;/h3&gt;
       &lt;figure&gt;
-        &lt;img alt=&quot;Imagen con leyenda&quot; /&gt;
+        &lt;img alt=&quot;Imagen con leyenda&quot; src=&quot;img&quot;&gt;
         &lt;figcaption&gt;Leyenda de la imagen&lt;/figcaption&gt;
       &lt;/figure&gt;
     &lt;/aside&gt;
