deploy: 051188326e9ad92a5020a66e02a4cd2fe0fca605

--- a/tema3/html/multimedia.html
+++ b/tema3/html/multimedia.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html" class="active">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html" class="active">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 4</li><li class="chapter-item expanded "><a href="../../tema4/css/css.html">CSS</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema4/css/sintaxis.html">Sintaxis</a></li><li class="chapter-item expanded "><a href="../../tema4/css/selectores.html">Selectores</a></li><li class="chapter-item expanded "><a href="../../tema4/css/pseudo.html">Pseudo-clases/elementos</a></li><li class="chapter-item expanded "><a href="../../tema4/css/modelovisual.html">Modelo visual</a></li><li class="chapter-item expanded "><a href="../../tema4/css/posicion.html">Posición</a></li><li class="chapter-item expanded "><a href="../../tema4/css/disposicion.html">Disposición</a></li><li class="chapter-item expanded "><a href="../../tema4/css/responsive.html">Diseño responsivo</a></li><li class="chapter-item expanded "><div>Pre-procesadores</div></li><li class="chapter-item expanded "><div>Bootstrap</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -151,14 +151,14 @@
                         <h1 id="html"><a class="header" href="#html">HTML</a></h1>
 <h2 id="multimedia"><a class="header" href="#multimedia">Multimedia</a></h2>
 <p>Además de textos, en una página se pueden incluir imágenes, audios, vídeos, otras páginas web, etc.</p>
-<ul>
-<li>
+<h3 id="imagen"><a class="header" href="#imagen">Imagen</a></h3>
 <p>Realiza de una en una las siguientes modificaciones sobre la etiqueta <code>&lt;img&gt;</code> del siguiente HTML:</p>
 <div class="codepen" data-prefill data-height="300" data-theme-id="light" data-default-tab="html,result" data-editable="true" style="opacity:0">
-<pre data-lang="html">
+<pre data-lang="html">&lt;body>
 &lt;p>
 Texto antes &lt;img src="URL imagen (absoluta o relativa)"/> Texto después 
 &lt;/p>
+&lt;/body>
 </pre>
 </div>
 <ol>
@@ -175,16 +175,16 @@ Texto antes &lt;img src="URL imagen (absoluta o relativa)"/> Texto después
 <p>Añade el atributo <code>height=&quot;100&quot;</code><sup class="footnote-reference"><a href="#2">2</a></sup>.</p>
 </li>
 </ol>
-</li>
-<li>
+<h3 id="vídeo"><a class="header" href="#vídeo">Vídeo</a></h3>
 <p>Realiza de una en una las siguientes modificaciones sobre la etiqueta <code>&lt;video&gt;</code> del siguiente HTML:</p>
 <div class="codepen" data-prefill data-height="300" data-theme-id="light" data-default-tab="html,result" data-editable="true" style="opacity:0">
-<pre data-lang="html">
+<pre data-lang="html">&lt;body>
 &lt;p>
 Texto antes
 &lt;video src="URL vídeo (absoluta o relativa)" controls>&lt;/video>
 Texto después
 &lt;/p>
+&lt;/body>
 </pre>
 </div>
 <ol>
@@ -201,21 +201,23 @@ Texto después
 <p>Cambia la etiqueta <code>video</code> por <code>audio</code><sup class="footnote-reference"><a href="#4">4</a></sup>.</p>
 </li>
 </ol>
-</li>
-<li>
+<h3 id="iframe"><a class="header" href="#iframe">Iframe</a></h3>
 <p>A veces es interesante embeber otra página web dentro de la actual para proporcionar funcionalidad desarrollada en otros servicios. Realiza de una en una las siguientes modificaciones sobre la etiqueta <code>&lt;iframe&gt;</code> del siguiente HTML:</p>
 <div class="codepen" data-prefill data-height="300" data-theme-id="light" data-default-tab="html,result" data-editable="true" style="opacity:0">
-<pre data-lang="html">
+<pre data-lang="html">&lt;body>
 &lt;p>
 Texto antes
 &lt;iframe src="URL (absoluta o relativa)" >&lt;/iframe>
 Texto después
 &lt;/p>
+&lt;/body>
 </pre>
 </div>
 <ol>
 <li>
-<p>Cambia el valor del atributo <code>src</code> a <code>&quot;https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.043120802949!2d-3.71490468429349!3d40.430044062753005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228662ebd8eeb%3A0xd7c09eaa5e0b0c59!2sEscuela%20T%C3%A9cnica%20Superior%20de%20Ingenier%C3%ADa%20(ICAI)!5e0!3m2!1ses!2ses!4v1673823476079!5m2!1ses!2ses&quot;</code>.</p>
+<p>Cambia el valor del atributo <code>src</code> a: </p>
+<pre><code class="language-url">https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.043120802949!2d-3.71490468429349!3d40.430044062753005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228662ebd8eeb%3A0xd7c09eaa5e0b0c59!2sEscuela%20T%C3%A9cnica%20Superior%20de%20Ingenier%C3%ADa%20(ICAI)!5e0!3m2!1ses!2ses!4v1673823476079!5m2!1ses!2ses
+</code></pre>
 </li>
 <li>
 <p>Añade el atributo <code>width=&quot;200&quot;</code><sup class="footnote-reference"><a href="#5">5</a></sup>.</p>
@@ -227,8 +229,6 @@ Texto después
 <p>Cambia el valor del atributo <code>src</code> a <code>&quot;https://developer.mozilla.org/en-US/docs/Web/HTML/Element/iframe&quot;</code><sup class="footnote-reference"><a href="#6">6</a></sup>.</p>
 </li>
 </ol>
-</li>
-</ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p>Reducción proporcional, los textos flotan alrededor.</p>
 </div>
