--- a/tema4/css/css.html
+++ b/tema4/css/css.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Declarativa - Reactiva - Programación de aplicaciones telemáticas</title>
+        <title>CSS - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html" class="active">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 4</li><li class="chapter-item expanded "><a href="../../tema4/css/css.html">CSS</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema4/css/sintaxis.html">Sintaxis</a></li><li class="chapter-item expanded "><a href="../../tema4/css/selectores.html">Selectores</a></li><li class="chapter-item expanded "><a href="../../tema4/css/pseudo.html">Pseudo-clases/elementos</a></li><li class="chapter-item expanded "><a href="../../tema4/css/modelovisual.html">Modelo visual</a></li><li class="chapter-item expanded "><a href="../../tema4/css/posicion.html">Posición</a></li><li class="chapter-item expanded "><a href="../../tema4/css/disposicion.html">Disposición</a></li><li class="chapter-item expanded "><a href="../../tema4/css/responsive.html">Diseño responsivo</a></li><li class="chapter-item expanded "><div>Pre-procesadores</div></li><li class="chapter-item expanded "><div>Bootstrap</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 4</li><li class="chapter-item expanded "><a href="../../tema4/css/css.html" class="active">CSS</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema4/css/sintaxis.html">Sintaxis</a></li><li class="chapter-item expanded "><a href="../../tema4/css/selectores.html">Selectores</a></li><li class="chapter-item expanded "><a href="../../tema4/css/pseudo.html">Pseudo-clases/elementos</a></li><li class="chapter-item expanded "><a href="../../tema4/css/modelovisual.html">Modelo visual</a></li><li class="chapter-item expanded "><a href="../../tema4/css/posicion.html">Posición</a></li><li class="chapter-item expanded "><a href="../../tema4/css/disposicion.html">Disposición</a></li><li class="chapter-item expanded "><a href="../../tema4/css/responsive.html">Diseño responsivo</a></li><li class="chapter-item expanded "><div>Pre-procesadores</div></li><li class="chapter-item expanded "><div>Bootstrap</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema1/paradigmas/reactiva.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema4/css/css.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,55 +148,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="paradigmas-de-programación"><a class="header" href="#paradigmas-de-programación">Paradigmas de programación</a></h1>
-<h2 id="declarativa"><a class="header" href="#declarativa">Declarativa</a></h2>
-<p>Lo contrario de imperativa: no hay estado, no especifica los pasos ni su orden de ejecución, define el &quot;qué&quot; pero no el &quot;cómo&quot;.</p>
-<h3 id="reactiva"><a class="header" href="#reactiva">Reactiva</a></h3>
-<p>Los resultados se obtienen transformando un &quot;stream&quot; de eventos (datos) y propagando (reaccionando a) los cambios automáticamente.</p>
-<details open><summary>Máximo valor en lista de enteros...</summary>
-<pre><code class="language-js">import { fromEvent } from &quot;https://cdn.skypack.dev/rxjs@7.3.0&quot;;
-import { scan, map } from &quot;https://cdn.skypack.dev/rxjs@7.3.0/operators&quot;;
-
-const output = document.querySelector(&quot;output&quot;);
-const button = document.querySelector(&quot;button&quot;);
-
-fromEvent(button, &quot;click&quot;)
-  .pipe(map(ev =&gt; ev.clientX), scan((total, n) =&gt; total &lt; n ? n : total))
-  .subscribe((max) =&gt; {
-    output.textContent = &quot;Max X = &quot; + max;
-  });
-</code></pre>
-<blockquote>
-<p>🔍 <strong>Nota:</strong> <em><a href="https://rxjs.dev/guide/overview">documentación</a> de <code>rxjs</code>.</em></p>
-</blockquote>
-</details>
-<details onclick='setTimeout(function(){__CPEmbed(".cp-later")},1)'><summary>Playground...</summary><br/>
-<div class="cp-later" data-prefill data-height="400" data-theme-id="light" data-default-tab="js,result" data-editable="true" style="opacity:0">
-<pre data-lang="html" >
-&lt;button&gt;Click me in different places&lt;/button&gt;
-&lt;output&gt;&lt;/output&gt;
-</pre>
-<pre data-lang="js">
-import { fromEvent } from "https://cdn.skypack.dev/rxjs@7.3.0";
-import { scan, map } from "https://cdn.skypack.dev/rxjs@7.3.0/operators";
-const output = document.querySelector("output");
-const button = document.querySelector("button");
-fromEvent(button, "click")
-  .pipe(map(ev =&gt; ev.clientX), scan((total, n) =&gt; total &lt; n ? n : total))
-  .subscribe((max) =&gt; { output.textContent = "Max X = " + max; });
-</pre>
-</div>
-</details>
+                        <h1 id="css"><a class="header" href="#css">CSS</a></h1>
+<p><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS">CSS</a> es el lenguaje que define cómo presentar la información contenida en un documento HTML. Esta separación entre contenido y presentación permite diseñar webs adaptadas a diferentes dispositivos y usuarios, e independizar el trabajo de los creadores de contenido de los diseñadores gráficos. El término &quot;presentación&quot; incluye colores, tipografías, tamaños, fondos, disposición de los elementos, etc.</p>
+<h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
+<ul>
+<li>
+<p>Dar estilo a los <strong>elementos</strong> definidos en un documento HTML.</p>
+</li>
+<li>
+<p>Aprender a colocar los diferentes <strong>elementos</strong> dentro de la <strong>página</strong>.</p>
+</li>
+<li>
+<p>Hacer que la <strong>página</strong> se vea bien en pantallas de diferente tamaño y resolución.</p>
+</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../tema1/paradigmas/funcional.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../tema3/html/vulnerabilidades.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../../tema2/http/http.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../tema4/css/sintaxis.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -206,11 +181,11 @@ fromEvent(button, "click")
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../tema1/paradigmas/funcional.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../tema3/html/vulnerabilidades.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../tema2/http/http.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../tema4/css/sintaxis.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
